<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <EditText android:id="@+id/new_value"
    	android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_value" />
    
      <EditText android:id="@+id/current_value"
    	 android:layout_width="fill_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/current_value" />
      
         <EditText android:id="@+id/current_age"
          android:layout_width="fill_parent"
          android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/current_age" />
         
           <EditText android:id="@+id/future_age"
    	 android:layout_width="fill_parent"
    	 android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/future_age" />
      
       <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send" 
         android:onClick="sendMessage" />
       
</LinearLayout>